--- a/page.css
+++ b/page.css
@@ -28,7 +28,7 @@
 .page {
   text-align: center;
   height: 100vh;
-  background-image: url('static/bg.jpg');
+  background: aquamarine;
   background-size: cover;
 }
 
